--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <!--Buttons that determine what unit thing you are looking at-->
     <div id="top">
         <button class="topButtons" id = "btn0" onclick="changeMode(this, 0)">area</button>
-        <button class="topButtons" id = "btn1" onclick="changeMode(this, 1)" disabled>currency</button>
+        <button class="topButtons" id = "btn1" onclick="changeMode(this, 1)" >currency</button>
         <button class="topButtons" id = "btn2" onclick="changeMode(this, 2)">length</button>
         <button class="topButtons" id = "btn3" onclick="changeMode(this, 3)">mass</button>
         <button class="topButtons" id = "btn4" onclick="changeMode(this, 4)">speed</button>
