--- a/index.html
+++ b/index.html
@@ -18,14 +18,14 @@
     </div>
 <!--Buttons that determine what unit thing you are looking at-->
     <div id="top">
-        <button class="topButtons" id = "btn0" onclick="changeMode(this, 0)">area</button>
-        <button class="topButtons" id = "btn1" onclick="changeMode(this, 1)" >currency</button>
-        <button class="topButtons" id = "btn2" onclick="changeMode(this, 2)">length</button>
-        <button class="topButtons" id = "btn3" onclick="changeMode(this, 3)">mass</button>
-        <button class="topButtons" id = "btn4" onclick="changeMode(this, 4)">speed</button>
-        <button class="topButtons" id = "btn5" onclick="changeMode(this, 5)">temperature</button>  
-        <button class="topButtons" id = "btn6" onclick="changeMode(this, 6)">time</button>
-        <button class="topButtons" id = "btn7" onclick="changeMode(this, 7)" disabled>volume</button>
+        <button class="topButtons" id = "btn0" onclick="changeMode(this, 0)"><span class="buttonText">area</span></button>
+        <button class="topButtons" id = "btn1" onclick="changeMode(this, 1)" ><span class="buttonText">currency</span></button>
+        <button class="topButtons" id = "btn2" onclick="changeMode(this, 2)"><span class="buttonText">length</span></button>
+        <button class="topButtons" id = "btn3" onclick="changeMode(this, 3)"><span class="buttonText">mass</span></button>
+        <button class="topButtons" id = "btn4" onclick="changeMode(this, 4)"><span class="buttonText">speed</span></button>
+        <button class="topButtons" id = "btn5" onclick="changeMode(this, 5)"><span class="buttonText">temperature</span></button>  
+        <button class="topButtons" id = "btn6" onclick="changeMode(this, 6)"><span class="buttonText">time</span></button>
+        <!--button class="topButtons" id = "btn7" onclick="changeMode(this, 7)" disabled>volume</button-->
         
     </div>
     <br>
